--- a/first.html
+++ b/first.html
@@ -6,6 +6,13 @@
     <title>My First Github</title>
 </head>
 <body>
-    
+    <div>
+        <h3>You to push incremental code</h3>
+        <ul>
+            <li>git add .</li>
+            <li>git commit -m"add a meaningful commit message"</li>
+            <li>git push</li>
+        </ul>
+    </div>
 </body>
 </html>
